tests/valid/definite/Function_Valid_2.whiley
define fr2nat as int where $ >= 0

void f(fr2nat x):
    print str(x)

void System::main([string] args):
    y = 1
    f(y)
