tests/invalid/simple/MethodCall_CompileFail_2.whiley
define process (int x) as dummy

void dummy::f(int x):
    print str(x)

void System::main([string] args):
    this->f(1)
